[package]
name = "rcon"
version = "0.5.0"
authors = ["panicbit <panicbit@users.noreply.github.com>"]
description = "An rcon protocol implementation"
license = "MIT OR Apache-2.0"
keywords = ["source", "rcon", "protocol", "minecraft"]
repository = "https://github.com/panicbit/rust-rcon"
edition = "2018"

[dependencies]
err-derive = "0.3.0"
async-std = { version = "1.9.0", default-features = false, features = ["async-io"] }
bytes = "1.0.1"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
