[package]
name = "rcon"
version = "0.5.2"
authors = ["panicbit <panicbit@users.noreply.github.com>"]
description = "An rcon protocol implementation"
license = "MIT OR Apache-2.0"
keywords = ["source", "rcon", "protocol", "minecraft"]
repository = "https://github.com/panicbit/rust-rcon"
edition = "2018"
resolver = "2"

[dependencies]
err-derive = "0.3.0"
tokio = { version = "1.10.1", features = ["io-util"] }

async-std = { version = "1.9.0", optional = true }

[features]
default = []
rt-async-std = ["async-std"]
rt-tokio = ["tokio/net", "tokio/time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
futures-timer = "3.0.2"
